force-app/main/default/objects/ESignature_Setting__mdt/fields/Allow_Low_Quality_Printing__c.field-meta.xml
<CustomField>
    <fullName>Allow_Low_Quality_Printing__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Low Quality Printing</label>
    <type>Checkbox</type>
</CustomField>