force-app/main/default/objects/ESignature_Setting__mdt/fields/Email_Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Email_Logo_URL__c</fullName>
    <description>Publicly accessible company logo URL used in outbound e-signature emails. Email clients must be able to load this URL without Salesforce authentication.</description>
    <label>Email Logo URL</label>
    <type>Url</type>
</CustomField>