force-app/main/default/objects/ESignature_Setting__mdt/fields/Enable_Checkbox_Field__c.field-meta.xml
<CustomField>
    <fullName>Enable_Checkbox_Field__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, users can add Checkbox fields while preparing an e-signature document.</description>
    <label>Enable Checkbox Field</label>
    <type>Checkbox</type>
</CustomField>