force-app/main/default/objects/ESignature_Setting__mdt/fields/Final_Pdf_Owner_Password__c.field-meta.xml
<CustomField>
    <fullName>Final_Pdf_Owner_Password__c</fullName>
    <label>Final PDF Owner Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>