force-app/main/default/objects/ESignature_Setting__mdt/fields/Finalizer_Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>Finalizer_Callback_URL__c</fullName>
    <description>Optional full callback URL Power Automate should call when finalization is complete. If blank, Salesforce builds one from Site Base URL.</description>
    <label>Finalizer Callback URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>