force-app/main/default/objects/ESignature_Setting__mdt/fields/Finalizer_Mode__c.field-meta.xml
<CustomField>
    <fullName>Finalizer_Mode__c</fullName>
    <description>Controls how Salesforce handles the finalizer response. Use PowerAutomateAsync for the Power Automate finalizer flow or Synchronous for a finalizer that returns finalPdfBase64 immediately.</description>
    <label>Finalizer Mode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>