force-app/main/default/objects/ESignature_Setting__mdt/fields/Finalizer_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Finalizer_Named_Credential__c</fullName>
    <label>Finalizer Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>