force-app/main/default/objects/ESignature_Setting__mdt/fields/Include_Source_PDF_In_Finalizer_Request__c.field-meta.xml
<CustomField>
    <fullName>Include_Source_PDF_In_Finalizer_Request__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, Salesforce sends sourcePdfBase64 to Power Automate. If unchecked, Power Automate must retrieve the source PDF using sourceContentVersionId.</description>
    <label>Include Source PDF In Finalizer Request</label>
    <type>Checkbox</type>
</CustomField>