force-app/main/default/objects/ESignature_Setting__mdt/fields/Include_User_Email_Signature__c.field-meta.xml
<CustomField>
    <fullName>Include_User_Email_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, e-signature notification emails include the sending user&apos;s Salesforce email signature. If unchecked, Salesforce does not append the user&apos;s email signature.</description>
    <label>Include User Email Signature</label>
    <type>Checkbox</type>
</CustomField>