force-app/main/default/objects/ESignature_Setting__mdt/fields/Org_Wide_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Org_Wide_Email_Address__c</fullName>
    <description>Email address of the verified Salesforce Org-Wide Email Address used for outbound e-signature notification emails. If blank or not found, Salesforce uses its default sender.</description>
    <label>Org-Wide Email Address</label>
    <type>Email</type>
</CustomField>