force-app/main/default/objects/ESignature_Setting__mdt/fields/Org_Wide_Email_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Wide_Email_Address_Id__c</fullName>
    <description>Salesforce Id of the verified Org-Wide Email Address used for outbound e-signature notification emails. Configure this when users cannot query OrgWideEmailAddress at send time.</description>
    <label>Org-Wide Email Address Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>