force-app/main/default/objects/ESignature_Setting__mdt/fields/Restrict_Copying__c.field-meta.xml
<CustomField>
    <fullName>Restrict_Copying__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Restrict Copying</label>
    <type>Checkbox</type>
</CustomField>