force-app/main/default/objects/ESignature_Setting__mdt/fields/Restrict_Editing__c.field-meta.xml
<CustomField>
    <fullName>Restrict_Editing__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Restrict Editing</label>
    <type>Checkbox</type>
</CustomField>