force-app/main/default/objects/ESignature_Setting__mdt/fields/Send_From_Signature_kaizonsoluitons_com__c.field-meta.xml
<CustomField>
    <fullName>Send_From_Signature_kaizonsoluitons_com__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send From Signature@kaizonsoluitons.com</label>
    <type>Checkbox</type>
</CustomField>